[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddkf"
version = "0.3.0"
description = "Dual Dynamic Kernel Filtering (2DKF) — minimal package"
readme = "README.md"
authors = [ { name = "Yunis Kahalan", email = "ykahalan@gmail.com" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["numpy>=1.21", "scipy>=1.7", "matplotlib>=3.4"]

[tool.setuptools.packages.find]
where = ["src"]
